unpackaged/main/default/objects/OrderApi__Item__c/fields/ProgramApi__Is_Program_Maintenance_Fee__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Is_Program_Maintenance_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines this item as an item that creates a maintenance term for an existing profile, matching the Sales Order Contact upon purchasing/invoicing this item.</description>
    <inlineHelpText>Defines this item as an item that creates a maintenance term for an existing profile, matching the Sales Order Contact upon purchasing/invoicing this item.</inlineHelpText>
    <label>Is Program Maintenance Fee</label>
    <type>Checkbox</type>
</CustomField>