unpackaged/main/default/objects/OrderApi__Item__c/fields/ProgramApi__Program__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Conditionally Required with Is Program Fee ** Defines the program for which a program profile is created as a result of purchasing/invoicing this item.</description>
    <inlineHelpText>Conditionally Required with Is Program Fee ** Defines the program for which a program profile is created as a result of purchasing/invoicing this item.</inlineHelpText>
    <label>Program</label>
    <referenceTo>ProgramApi__Program__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>