unpackaged/main/default/objects/OrderApi__Item__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECCHO</fullName>
            </value>
            <value>
                <fullName>ECCHO Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>