unpackaged/main/default/objects/OrderApi__Item__c/fields/ROEApi__Item_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>ROEApi__Item_Class_Name__c</fullName>
    <description>**System Calculated** Item Class Name</description>
    <formula>OrderApi__Item_Class__r.Name</formula>
    <inlineHelpText>**System Calculated** Item Class Name</inlineHelpText>
    <label>SYSTEM</label>
    <type>Text</type>
</CustomField>