unpackaged/main/default/objects/OrderApi__Item__c/fields/View_PDF__c.field-meta.xml
<CustomField>
    <fullName>View_PDF__c</fullName>
    <label>View PDF</label>
    <type>Url</type>
</CustomField>