unpackaged/main/default/objects/OrderApi__Item__c/fields/View_WebEx__c.field-meta.xml
<CustomField>
    <fullName>View_WebEx__c</fullName>
    <label>View WebEx</label>
    <type>Url</type>
</CustomField>