unpackaged/main/default/objects/OrderApi__Item__c/listViews/Active_Items.listView-meta.xml
<ListView>
    <fullName>Active_Items</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Item_Class__c</columns>
    <columns>OrderApi__Price__c</columns>
    <columns>OrderApi__Is_Active__c</columns>
    <columns>OrderApi__Is_Event__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>FON-</value>
    </filters>
    <filters>
        <field>OrderApi__Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Items</label>
</ListView>