unpackaged/main/default/objects/OrderApi__Item__c/listViews/Media_Items.listView-meta.xml
<ListView>
    <fullName>Media_Items</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Item_Class__c</columns>
    <columns>OrderApi__Price__c</columns>
    <columns>OrderApi__Is_Active__c</columns>
    <columns>Media_Asset__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>FON-</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>Recording</value>
    </filters>
    <label>Media Items</label>
</ListView>