unpackaged/main/default/objects/OrderApi__Item__c/listViews/Membership_Items.listView-meta.xml
<ListView>
    <fullName>Membership_Items</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>OrderApi__Is_Active__c</columns>
    <columns>OrderApi__Item_Class__c</columns>
    <columns>OrderApi__Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OrderApi__Is_Subscription__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OrderApi__Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Membership Items</label>
</ListView>