unpackaged/main/default/objects/OrderApi__Item__c/listViews/NCP_Workshops.listView-meta.xml
<ListView>
    <fullName>NCP_Workshops</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__SKU__c</columns>
    <columns>OrderApi__Item_Class__c</columns>
    <columns>OrderApi__Require_Assignments__c</columns>
    <columns>OrderApi__Business_Group__c</columns>
    <columns>OrderApi__Income_Account__c</columns>
    <columns>OrderApi__Refund_Account__c</columns>
    <columns>OrderApi__Cost__c</columns>
    <columns>OrderApi__Price__c</columns>
    <columns>OrderApi__Is_Active__c</columns>
    <columns>OrderApi__Is_Event__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>FON-</value>
    </filters>
    <filters>
        <field>OrderApi__Item_Class__c</field>
        <operation>contains</operation>
        <value>NCP CE Workshops</value>
    </filters>
    <filters>
        <field>OrderApi__Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>NCP CE Workshops</label>
</ListView>